# code_projects

./: .gitignore  README.md  tasks.md
absurdle_solver/: absurdle_solver.py
bit_rich_quick/: README.md
bit_rich_quick/data/: Coinbase_BTCUSD_1h.csv
bit_rich_quick/src/: importer.py  sim.py  simple_algorithm.py  trading_algorithm.py
chess_engine/: .clang-format  .clang-tidy  CMakeLists.txt  clean.sh  create_build.sh  tasks.txt  todo.txt
chess_engine/app/: CMakeLists.txt  chess.cpp  chess_game.cpp  engine_main.cpp  perft.cpp
chess_engine/include/: Bishop.h  Board.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Player.h  Queen.h  RestrictedPiece.h  Rook.h  Square.h  bishop.h  bitboard.h  board.h  chess.h  chess_types.h  coordinates.h  game.h  king.h  knight.h  meneldor_engine.h  move.h  move_generator.h  move_orderer.h  my_assert.h  pawn.h  piece.h  player.h  position.h  queen.h  restricted_piece.h  rook.h  square.h  transposition_table.h  uci_engine_player.h  utils.h  zobrist_hash.h  zobrist_hasher.h
chess_engine/output/: performance_log.txt
chess_engine/scripts/: find_magics.c  perft_compare.py
chess_engine/src/: Bishop.cpp  Board.cpp  CMakeLists.txt  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  RestrictedPiece.cpp  Rook.cpp  Square.cpp  bishop.cpp  bitboard.cpp  board.cpp  chess.cpp  chess_types.cpp  coordinates.cpp  engine_player.cpp  feature_toggle.cpp  game.cpp  king.cpp  knight.cpp  meneldor_engine.cpp  move.cpp  move_generator.cpp  move_orderer.cpp  my_assert.cpp  pawn.cpp  piece.cpp  player.cpp  queen.cpp  restricted_piece.cpp  rook.cpp  square.cpp  transposition_table.cpp  uci_engine_player.cpp  utils.cpp  zobrist_hash.cpp  (+1 more)
chess_engine/tests/: CMakeLists.txt  chess_engine_tests.cpp  engine_tests.cpp  general_tests.cpp  perft_tests.cpp
chess_opening_trainer/: chess_opening_trainer.py  vienna_gambit.json
codenames_game/: .env.example  AGENTS.md  Cargo.toml  README.md
codenames_game/src/: api.rs  game.rs  llm.rs  main.rs  transcript.rs  websocket.rs
codenames_game/static/: app.js  index.html  styles.css
crafting_interpreters/: README.md
crafting_interpreters/part1/: Cargo.toml
crafting_interpreters/part1/src/: main.rs  scanner.rs  token.rs
disc_golf_flight_simulation/: Cargo.toml  README.md  generate_diagram.py  notes.md  run_checkers.sh  system_diagram.dot
disc_golf_flight_simulation/data/: discs.json
disc_golf_flight_simulation/src/: disc_reader.rs  main.rs  path_simulator.rs  plotter.rs
django_tutorial/: README.md
django_tutorial/poll_site/: db.sqlite3
django_tutorial/poll_site/poll_site/: settings.py
django_tutorial/poll_site/polls/: urls.py
gar/: CMakeLists.txt  README.md  conanfile.txt
gar/include/: color.h  image_writer.h  mesh.h  model.h  pch.hpp  pga3d.h  ppm_writer.h  tiny_obj_loader.h  vertex.h  vulkan_toolbox.h
gar/shaders/: shader.frag
gar/src/: main.cpp  vertex.cpp  vulkan_toolbox.cpp
gar/tools/: clang-format-pre-commit
haskell-projects/: README.md  References.txt
haskell-projects/calendar/: ChangeLog.md  Main  Main.hs  README.md  calendar.cabal
haskell-projects/calendar/tools/: hfmt-pre-commit
haskell-projects/include-transitive-closure/: ChangeLog.md  Main.hs  README.md  include-transitive-closure.cabal
hearts_card_game/: notes.txt  pyproject.toml  requirements.txt
hearts_card_game/src/: window.py
hood_meadows_traversal/: CPPSolver.java  OriginalCPP.java  README.md  hood_meadows_edgelist.txt  lifts.txt  nodes.txt  output_1_1_2020.txt
legacy_chess_engine/: architecture_notes.txt
legacy_chess_engine/include/: bishop.h  knight.h  pawn.h  piece.h  queen.h  restricted_piece.h
legacy_chess_engine/src/: bishop.cpp  board.cpp  chess.cpp  game.cpp  king.cpp  knight.cpp  queen.cpp  restricted_piece.cpp  square.cpp
nn/: CMakeLists.txt  create_build.sh
nn/include/: nn.h
nn/src/: nn.cpp  test_main.cpp  tests.cpp
