[package]
name = "disc_golf_flight_simulation"
version = "0.1.0"
edition = "2021"
authors = [ "Jeremy Sigrist" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.17.0"
serde = "1.0.145"
serde_json   = "1.0.85"
serde_derive = "1.0.145"
plotters = "0.3.4"
